--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
 		<module>core-service</module>
 		<module>cart-service</module>
         <module>api</module>
+        <module>front-service</module>
+        <module>auth-service</module>
+        <module>gateway-service</module>
     </modules>
 
 	<groupId>ru.yaromich.pets.market</groupId>
